# leli

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  install.rs  main.py
.github/workflows/: dependency_update.yml
example/: README.md  math_operations.md
example/nested_folder/private/: decision_tree.md
migrations/2024-07-29-171716_create_html_metadata/: down.sql  up.sql
src/: extract.rs  main.rs  schema.rs  translate.rs  utils.rs
src/commands/: extract.rs  mod.rs  models.rs  save.rs  translate.rs
src/css/: style.css
windows/: sqlite3.def  sqlite3.lib
