[package]
name = "leli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
pulldown-cmark = "0.11.0"
regex = "1.10.5"
diesel = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
